Expose vxmq.ignite.discovery.tcp.addresses for Ignite TCP discovery