@@ -274,6 +274,7 @@
               <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
               <jvmFlag>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmFlag>
               <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
             </jvmFlags>
             <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
             <ports>
